# self-driving

./: Cargo.toml
src/: _car.rs  car.rs  collision.rs  controls.rs  direction.rs  lanes.rs  main.rs  movement.rs  neural_network.rs  position.rs  road.rs  sensor.rs  speed.rs  traffic.rs
src/acceleration/: mod.rs
src/car/: acceleration.rs  controller.rs  mod.rs  traffic.rs
src/highway/: mod.rs  road.rs
