[package]
name = "self-driving"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier2d"] }
bevy_rapier2d = {version = "0.21.0", features = ["simd-stable", "debug-render-2d", "wasm-bindgen"]}
rand = "0.8.5"
